grammar.js
    source_file: $ => repeat($._item),

    // ─────────────────────────────────────────────────────────────
    // Items (top-level and nested in struct/enum/trait/impl bodies)
    // ─────────────────────────────────────────────────────────────

    _item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.const_declaration,
      $.function_declaration,
      $.struct_declaration,
      $.enum_declaration,
      $.error_declaration,
      $.type_alias,
      $.distinct_type,
      $.trait_declaration,
      $.impl_block,
    ),

    decorator: $ => seq(
      '@',
      field('name', $.decorator_path),
      optional(field('arguments', $.argument_list)),
    ),

    decorator_path: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    // ── Module / import ──────────────────────────────────────────

    module_declaration: $ => seq(
      'module',
      field('path', $.module_path),
      optional(';'),
    ),

    import_declaration: $ => seq(
      'import',
      choice(
        // import { A, B } from "path"
        seq(
          field('items', $.import_items),
          'from',
          field('source', $.string_literal),
        ),
        // import "path" as Alias
        // import "path"
        seq(
          field('source', $.string_literal),
          optional(seq('as', field('alias', $.identifier))),
        ),
      ),
      optional(';'),
    ),

    import_items: $ => seq(
      '{',
      sepBy1(',', seq(
        $.identifier,
        optional(seq('as', $.identifier)),
      )),
      optional(','),
      '}',
    ),

    module_path: $ => sepBy1('.', $.identifier),

    // ── Const ────────────────────────────────────────────────────

    const_declaration: $ => seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      optional(';'),
    ),

    // ── Function ─────────────────────────────────────────────────

    function_declaration: $ => seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      optional($.unsafe_modifier),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
      optional(field('using_clause', $.using_clause)),
      optional(field('where_clause', $.where_clause)),
      choice(
        field('body', $.block),
        seq('=>', field('body', $._expression), optional(';')),
        optional(';'),               // bodyless fn (intrinsic / trait stub)
      ),
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        sepBy1(',', $.parameter),
        optional(','),
      )),
      ')',
    ),

    parameter: $ => choice(
      // self / mut self
      seq(optional('mut'), 'self'),
      // name (: type)? (= default)?
      seq(
        optional('mut'),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),
    ),

    struct_declaration: $ => seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      'struct',
      field('name', alias($.identifier, $.type_identifier)),
      optional(field('type_parameters', $.generic_parameters)),
      optional(field('where_clause', $.where_clause)),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq(
      '{',
      repeat(choice(
        seq($.field_declaration, optional(',')),
        $.function_declaration,
        $.const_declaration,
        $.type_alias,
      )),
      '}',
    ),

    field_declaration: $ => prec.right(seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    )),

    // ── Enum ─────────────────────────────────────────────────────

    enum_declaration: $ => seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      'enum',
      field('name', alias($.identifier, $.type_identifier)),
      optional(field('type_parameters', $.generic_parameters)),
      optional(field('where_clause', $.where_clause)),
      field('body', $.enum_body),
    ),

    enum_body: $ => seq(
      '{',
      repeat(choice(
        $.enum_variant,
        $.function_declaration,
        $.const_declaration,
        $.type_alias,
      )),
      '}',
    ),

    enum_variant: $ => seq(
      repeat($.decorator),
      field('name', alias($.identifier, $.type_identifier)),
      optional(choice(
        $.enum_variant_tuple,
        $.enum_variant_struct,
      )),
      optional(','),
    ),

    enum_variant_tuple: $ => seq(
      '(',
      sepBy(',', $._type),
      optional(','),
      ')',
    ),

    distinct_type: $ => seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      'distinct',
      'type',
      field('name', alias($.identifier, $.type_identifier)),
      optional(field('type_parameters', $.generic_parameters)),
      '=',
      field('value', $._type),
      optional(';'),
    ),

    // ── Trait ────────────────────────────────────────────────────

    trait_declaration: $ => seq(
      repeat($.decorator),
      optional($.visibility_modifier),
      'trait',
      field('name', alias($.identifier, $.type_identifier)),
      optional(field('type_parameters', $.generic_parameters)),
      optional(field('super_traits', seq(':', sepBy1('+', $._type)))),
      optional(field('where_clause', $.where_clause)),
      field('body', $.trait_body),
    ),

    trait_body: $ => seq(
      '{',
      repeat(choice(
        $.function_declaration,
        $.const_declaration,
        $.type_alias,
      )),
      '}',
    ),

    // ── Impl ─────────────────────────────────────────────────────

    generic_parameters: $ => seq(
      '[',
      sepBy1(',', $.generic_parameter),
      optional(','),
      ']',
    ),

    generic_parameter: $ => seq(
      field('name', alias($.identifier, $.type_identifier)),
      optional(seq(':', sepBy1('+', $._type))),
      optional(seq('=', field('default', $._type))),
    ),

    generic_arguments: $ => prec.dynamic(1, seq(
      '[',
      sepBy1(',', $._type),
      optional(','),
      ']',
    )),

    // ─────────────────────────────────────────────────────────────
    // Types
    // ─────────────────────────────────────────────────────────────

    _type: $ => choice(
      $.generic_type,
      $.named_type,
      $.tuple_type,
      $.list_type,
      $.optional_type,
      $.fallible_type,
      $.function_type,
      $.unsafe_type,
      $.union_type,
      $.unit_type,
      $.never_type,
    ),

    named_type: $ => alias($.identifier, $.type_identifier),

    function_type: $ => prec.right(seq(
      'fn',
      '(',
      sepBy(',', $._type),
      optional(','),
      ')',
      optional(seq(choice('->', ':'), $._type)),
    )),

    _statement: $ => choice(
      $.binding_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.yield_statement,
      $.defer_statement,
      $.error_statement,
      $.expression_statement,
    ),

    binding_statement: $ => choice(
      // mut name := expr
      seq(
        'mut',
        field('pattern', $._pattern),
        ':=',
        field('value', $._expression),
        optional(';'),
      ),
      // name := expr / pat := expr (let-style)
      seq(
        field('pattern', $._pattern),
        ':=',
        field('value', $._expression),
        optional(seq('else', field('else_branch', $.block))),
        optional(';'),
      ),
      // name : Type = expr  (typed binding, optionally mut)
      // name : Type        (uninitialized typed binding)
      prec.right(1, seq(
        optional('mut'),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
        optional(';'),
      )),
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
      optional(';'),
    )),

    _expression: $ => choice(
      $._literal,
      $.identifier_expression,
      $.path_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.list_expression,
      $.struct_literal,
      $.block,
      $.unsafe_block,
      $.if_expression,
      $.match_expression,
      $.for_expression,
      $.loop_expression,
      $.while_expression,
      $.spawn_expression,
      $.race_expression,
      $.select_expression,
      $.lambda_expression,
      $.unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.range_expression,
      $.assignment_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_access_expression,
      $.index_expression,
      $.optional_call,                // ?. and ?
      $.try_expression,               // expr.catch
    ),

    identifier_expression: $ => $.identifier,

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    match_expression: $ => seq(
      'match',
      field('scrutinee', $._expression),
      '{',
      repeat($.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('body', choice(
        $._expression,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.yield_statement,
        $.error_statement,
      )),
      optional(','),
    ),

    binary_expression: $ => {
      const ops = [
        [PREC.pipeline,        '|>',          'left'],
        [PREC.coalesce,        '??',          'left'],
        [PREC.or_kw,           '||',          'left'],
        [PREC.or_kw,           'or',          'left'],
        [PREC.and_kw,          '&&',          'left'],
        [PREC.and_kw,          'and',         'left'],
        [PREC.comparison,      '==',          'left'],
        [PREC.comparison,      '!=',          'left'],
        [PREC.comparison,      '<',           'left'],
        [PREC.comparison,      '<=',          'left'],
        [PREC.comparison,      '>',           'left'],
        [PREC.comparison,      '>=',          'left'],
        [PREC.comparison,      'is',          'left'],
        [PREC.bit_or,          '|',           'left'],
        [PREC.bit_xor,         '^',           'left'],
        [PREC.bit_and,         '&',           'left'],
        [PREC.shift,           '<<',          'left'],
        [PREC.shift,           '>>',          'left'],
        [PREC.additive,        '+',           'left'],
        [PREC.additive,        '-',           'left'],
        [PREC.multiplicative,  '*',           'left'],
        [PREC.multiplicative,  '/',           'left'],
        [PREC.multiplicative,  '%',           'left'],
      ];
      return choice(...ops.map(([p, op, assoc]) =>
        (assoc === 'right' ? prec.right : prec.left)(p, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        )),
      ));
    },

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._expression),
      optional(field('type_arguments', $.generic_arguments)),
      field('arguments', $.argument_list),
    )),

    method_call_expression: $ => prec(PREC.postfix + 1, seq(
      field('receiver', $._expression),
      '.',
      field('method', $.identifier),
      optional(field('type_arguments', $.generic_arguments)),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      sepBy(',', choice(
        $.named_argument,
        $._expression,
      )),
      optional(','),
      ')',
    ),

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.literal_pattern,
      $.binding_pattern,
      $.tuple_pattern,
      $.list_pattern,
      $.struct_pattern,
      $.variant_pattern,
      $.range_pattern,
      $.or_pattern,
      $.parenthesized_pattern,
      $.spread_pattern,
    ),

    wildcard_pattern: _ => '_',
    binding_pattern: $ => prec.right(seq(
      $.identifier,
      optional(seq('@', $._pattern)),
    )),

    variant_pattern: $ => prec(1, seq(
      field('type', choice($.named_type, $.generic_type)),
      '(',
      sepBy(',', $._pattern),
      optional(','),
      ')',
    )),

    integer_literal: _ => token(seq(
      choice(
        /0x[0-9a-fA-F][0-9a-fA-F_]*/,
        /0b[01][01_]*/,
        /0o[0-7][0-7_]*/,
        /[0-9][0-9_]*/,
      ),
      optional(/[ui](8|16|32|64|size)|f(32|64)/),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.string_interpolation,
        $.string_interpolation_ident,
      )),
      '"',
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\$]+/)),

    string_interpolation: $ => seq(
      token.immediate('${'),
      /[^}]*/,
      '}',
    ),

    // `$ident` shorthand
    string_interpolation_ident: _ => token.immediate(seq(
      '$',
      /[a-zA-Z_][a-zA-Z0-9_]*/,
    )),

    boolean_literal: _ => choice('true', 'false'),

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Same lexical class — distinguished only by being in a
    // type position. Lets highlight queries target type names.

    // ─────────────────────────────────────────────────────────────
    // Comments
    // ─────────────────────────────────────────────────────────────
